syntax = "proto3";

package im.gateway;

option go_package = "./api/gateway;gateway";

import "api/protocol/protocol.proto";




message PushMessageReq{
    repeated string keys = 1;
    im.protocol.Proto proto = 2;
    int32 protoOp = 3;
}


message PushMessageResp {}



message BroadcastReq{
    int32 protoOp = 1;
    im.protocol.Proto proto = 2;
    int32 speed = 3;
}

message BroadcastResp{}

message BroadcastRoomReq {
    string roomID = 1;
    im.protocol.Proto proto = 2;
}

message BroadcastRoomResp{}

message RoomsReq{}

message RoomsResp {
    map<string,bool> rooms = 1;
}

service Gateway {
    rpc Broadcast(BroadcastReq) returns (BroadcastResp);
    rpc PushMessage(PushMessageReq) returns (PushMessageResp);
    rpc BroadcastRoom(BroadcastRoomReq) returns (BroadcastRoomResp);
    rpc Rooms(RoomsReq) returns (RoomsResp);
}